--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F5F3E2;
+  background-color: var(--color-background);
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 code {
@@ -13,6 +18,10 @@ code {
     monospace;
 }
 
-:root {
-  overflow-x: hidden;
+:root{
+  --color-brand: #3C422E;
+  --color-highlight: #f3ecbf;
+  --color-background: #F5F3E2;
+  --color-accent: #F6E6D9;
+  --color-background-contrast: #fffeed;
 }
